Add aws-k8s-1.17 variant with Kubernetes 1.17
There are only minor changes from the aws-k8s-1.16 variant:
* Rebase the aws-sdk-go update patch
* No longer need the license clarification for github.com/munnerz/goautoneg
  because the project added a license file
* Disable new CSIMigration in kubelet-config until further supported:
  https://kubernetes.io/blog/2019/12/09/kubernetes-1-17-feature-csi-migration-beta/

--- a/packages/Cargo.toml
+++ b/packages/Cargo.toml
@@ -27,6 +27,7 @@ members = [
     "kmod",
     "kubernetes-1.15",
     "kubernetes-1.16",
+    "kubernetes-1.17",
     "libacl",
     "libattr",
     "libaudit",
