build: exclude more paths in .dockerignore
Otherwise many unnecessary build artifacts are sent as context.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,8 @@
 /.git
 /.gomodcache
-/build/*.img
-/build/*.lz4
-/build/*.tar
-/build/*-debuginfo-*.rpm
-/build/*-debugsource-*.rpm
+/build/**/*.img
+/build/**/*.lz4
+/build/**/*.tar
+/build/**/*-debuginfo-*.rpm
+/build/**/*-debugsource-*.rpm
 **/target/*
