--- a/Release.toml
+++ b/Release.toml
@@ -1,7 +1,8 @@
-version = "0.4.0"
+version = "0.4.1"
 
 [migrations]
 "(0.3.1, 0.3.2)" = ["migrate_v0.3.2_admin-container-v0-5-0.lz4"]
 "(0.3.2, 0.3.3)" = []
 "(0.3.3, 0.3.4)" = []
 "(0.3.4, 0.4.0)" = []
+"(0.4.0, 0.4.1)" = ["migrate_v0.4.1_add-version-lock-ignore-waves.lz4", "migrate_v0.4.1_pivot-repo-2020-07-07.lz4"]
