--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -20,6 +20,7 @@ members = [
     # "api/migration/migrations/vX.Y.Z/...
     "api/migration/migrations/v0.3.2/migrate-admin-container-v0-5-0",
     "api/migration/migrations/v0.4.1/add-version-lock-ignore-waves",
+    "api/migration/migrations/v0.4.1/pivot-repo-2020-07-07",
 
     "bottlerocket-release",
 
