Allow migrations to access os.* settings
Co-authored-by: Tom Kirchner <tjk@amazon.com>
Co-authored-by: Jamie Anderson <jamieand@amazon.com>

--- a/sources/api/migration/migration-helpers/Cargo.toml
+++ b/sources/api/migration/migration-helpers/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 
 [dependencies]
 apiserver = { path = "../../apiserver" }
+bottlerocket-release = { path = "../../../bottlerocket-release" }
 schnauzer = { path = "../../schnauzer" }
 handlebars = "3.0.1"
 snafu = "0.6"
