--- a/sources/api/migration/migrations/v0.3.2/migrate-admin-container-v0-5-0/Cargo.toml
+++ b/sources/api/migration/migrations/v0.3.2/migrate-admin-container-v0-5-0/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Erikson Tung <etung@amazon.com>"]
 license = "Apache-2.0 OR MIT"
 edition = "2018"
 publish = false
+# Don't rebuild crate just because of changes to README.
+exclude = ["README.md"]
 
 [dependencies]
 migration-helpers = { path = "../../../migration-helpers" }
