--- a/sources/api/migration/migrations/v0.4.1/pivot-repo-2020-07-07/Cargo.toml
+++ b/sources/api/migration/migrations/v0.4.1/pivot-repo-2020-07-07/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Jamie Anderson <jamieand@amazon.com"]
 license = "Apache-2.0 OR MIT"
 edition = "2018"
 publish = false
+# Don't rebuild crate just because of changes to README.
+exclude = ["README.md"]
 
 [dependencies]
 migration-helpers = { path = "../../../migration-helpers" }
