--- a/sources/logdog/Cargo.toml
+++ b/sources/logdog/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Matt Briggs <brigmatt@amazon.com>"]
 license = "Apache-2.0 OR MIT"
 edition = "2018"
 publish = false
+# Don't rebuild crate just because of changes to README.
+exclude = ["README.md"]
 
 [dependencies]
 flate2 = "1.0"
