--- a/packages/Cargo.toml
+++ b/packages/Cargo.toml
@@ -49,8 +49,9 @@ members = [
     "libpcap",
     "libpcre",
     "libseccomp",
-    "libsepol",
     "libselinux",
+    "libsemanage",
+    "libsepol",
     "libstd-rust",
     "libxcrypt",
     "login",
