--- a/packages/Cargo.toml
+++ b/packages/Cargo.toml
@@ -56,6 +56,7 @@ members = [
     "libxcrypt",
     "login",
     "ncurses",
+    "policycoreutils",
     "procps",
     "readline",
     "release",
