--- a/Release.toml
+++ b/Release.toml
@@ -1,4 +1,4 @@
-version = "0.4.1"
+version = "0.5.0"
 
 [migrations]
 "(0.3.1, 0.3.2)" = ["migrate_v0.3.2_admin-container-v0-5-0.lz4"]
@@ -6,3 +6,4 @@ version = "0.4.1"
 "(0.3.3, 0.3.4)" = []
 "(0.3.4, 0.4.0)" = []
 "(0.4.0, 0.4.1)" = ["migrate_v0.4.1_add-version-lock-ignore-waves.lz4", "migrate_v0.4.1_pivot-repo-2020-07-07.lz4"]
+"(0.4.1, 0.5.0)" = ["migrate_v0.5.0_admin-container-v0-5-1.lz4", "migrate_v0.5.0_control-container-v0-4-1.lz4"]
