--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -22,6 +22,8 @@ members = [
     "api/migration/migrations/v0.3.2/migrate-admin-container-v0-5-0",
     "api/migration/migrations/v0.4.1/add-version-lock-ignore-waves",
     "api/migration/migrations/v0.4.1/pivot-repo-2020-07-07",
+    "api/migration/migrations/v0.5.0/migrate-admin-container-v0-5-1",
+    "api/migration/migrations/v0.5.0/migrate-control-container-v0-4-1",
 
     "bottlerocket-release",
 
