--- a/sources/api/schnauzer/Cargo.toml
+++ b/sources/api/schnauzer/Cargo.toml
@@ -15,6 +15,7 @@ base64 = "0.12"
 bottlerocket-release = { path = "../../bottlerocket-release" }
 handlebars = "3.0"
 http = "0.2"
+lazy_static = "1.4"
 log = "0.4"
 models = { path = "../../models" }
 serde = { version = "1.0", features = ["derive"] }
