--- a/Release.toml
+++ b/Release.toml
@@ -6,4 +6,4 @@ version = "0.5.0"
 "(0.3.3, 0.3.4)" = []
 "(0.3.4, 0.4.0)" = []
 "(0.4.0, 0.4.1)" = ["migrate_v0.4.1_add-version-lock-ignore-waves.lz4", "migrate_v0.4.1_pivot-repo-2020-07-07.lz4"]
-"(0.4.1, 0.5.0)" = ["migrate_v0.5.0_admin-container-v0-5-1.lz4", "migrate_v0.5.0_control-container-v0-4-1.lz4"]
+"(0.4.1, 0.5.0)" = ["migrate_v0.5.0_add-cluster-domain.lz4", "migrate_v0.5.0_admin-container-v0-5-2.lz4", "migrate_v0.5.0_control-container-v0-4-1.lz4"]
