aws-ecs-1: constrain ephemeral port range
ECS documents a smaller ephemeral port range than is default on
Bottlerocket.  Constraining our range to the documented ECS range should
avoid surprising customers who expect ECS's documented range and have
configured their security groups accordingly.

--- a/packages/ecs-agent/ecs-sysctl.conf
+++ b/packages/ecs-agent/ecs-sysctl.conf
@@ -1,2 +1,6 @@
 # ECS task role endpoint
 net.ipv4.conf.all.route_localnet = 1
+
+# Constrain ephemeral ports to the range documented for ECS
+# https://docs.aws.amazon.com/AmazonECS/latest/APIReference/API_PortMapping.html
+net.ipv4.ip_local_port_range = 32768 60999
