--- a/sources/logdog/Cargo.toml
+++ b/sources/logdog/Cargo.toml
@@ -10,10 +10,12 @@ exclude = ["README.md"]
 
 [dependencies]
 flate2 = "1.0"
+reqwest = { version = "0.10.1", default-features = false, features = ["blocking", "rustls-tls"] }
 shell-words = "1.0.0"
 snafu = { version = "0.6", features = ["backtraces-impl-backtrace-crate"] }
 tar = { version = "0.4", default-features = false }
 tempfile = { version = "3.1.0", default-features = false }
+url = "2.1.1"
 
 [build-dependencies]
 cargo-readme = "3.1"
