metricdog: anonymous bottlerocket metrics
Metricdog is a new command-line program that sends anonymous information
about a Bottlerocket instance to a metrics endpoint. A report of boot
success is sent by the mark-boot-success service and at 2 minutes after
boot, and every 6 hours thereafter, a report of service health is sent.

--- a/packages/os/Cargo.toml
+++ b/packages/os/Cargo.toml
@@ -10,6 +10,7 @@ variant-sensitive = true
 source-groups = [
     "api",
     "bottlerocket-release",
+    "metricdog",
     "parse-datetime",
     "ghostdog",
     "growpart",
