--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -27,6 +27,7 @@ members = [
     "api/migration/migrations/v0.5.0/add-cluster-domain",
     "api/migration/migrations/v1.0.0/ecr-helper-admin",
     "api/migration/migrations/v1.0.0/ecr-helper-control",
+    "api/migration/migrations/v1.0.2/add-enable-spot-instance-draining",
 
     "bottlerocket-release",
 
