ci: disable GOPROXY for builds
Otherwise requests end up throttled and jobs time out.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,8 @@ jobs:
             arch: x86_64
             supported: false
       fail-fast: false
+    env:
+      GOPROXY: direct
     steps:
       - uses: actions/checkout@v2
       - run: cargo install --version 0.30.0 cargo-make
