--- a/Makefile.toml
+++ b/Makefile.toml
@@ -156,7 +156,7 @@ ${BUILDSYS_TOOLS_DIR}/docker-go \
   --module-path ${BUILDSYS_SOURCES_DIR}/host-ctr \
   --sdk-image ${BUILDSYS_SDK_IMAGE} \
   --go-mod-cache ${GO_MOD_CACHE} \
-  --command "go list -mod=readonly ./... >/dev/null && go mod vendor"
+  --command "set -x; time go list -mod=readonly ./... && time go mod vendor -v"
 '''
 ]
 
