--- a/packages/Cargo.toml
+++ b/packages/Cargo.toml
@@ -15,6 +15,7 @@ members = [
     "docker-engine",
     "docker-init",
     "docker-proxy",
+    "e2fsprogs",
     "ecs-agent",
     "filesystem",
     "findutils",
