--- a/sources/api/pluto/Cargo.toml
+++ b/sources/api/pluto/Cargo.toml
@@ -10,6 +10,7 @@ build = "build.rs"
 exclude = ["README.md"]
 
 [dependencies]
+lazy_static = "1.4"
 reqwest = { version = "0.10", default-features = false, features = ["blocking"]}
 serde_json = "1"
 snafu = "0.6"
