Add aws-k8s-1.18 variant with Kubernetes 1.18
Co-authored-by: Tom Kirchner <tjk@amazon.com>

--- a/packages/Cargo.toml
+++ b/packages/Cargo.toml
@@ -29,6 +29,7 @@ members = [
     "kubernetes-1.15",
     "kubernetes-1.16",
     "kubernetes-1.17",
+    "kubernetes-1.18",
     "libacl",
     "libattr",
     "libaudit",
