--- a/.dockerignore
+++ b/.dockerignore
@@ -2,6 +2,7 @@
 /.gomodcache
 /build/**/*.img
 /build/**/*.lz4
+/build/**/*.xz
 /build/**/*.tar
 /build/**/*-debuginfo-*.rpm
 /build/**/*-debugsource-*.rpm
