apiclient: move to async/await
Previously, we created a Tokio runtime inside raw_request, and used some
(rather complicated) logic around hyper futures to get the result.  After
moving to async/await, we can use more natural APIs that depend on await, and
just read the response body into a string.

This also means that other async programs can use raw_request; no panic.

This change means that users of the apiclient library need to await its
results, and this cascades async into those function definitions, and requires
their binaries to set up a Tokio event loop, which is the bulk of the diff.

--- a/sources/api/thar-be-updates/Cargo.toml
+++ b/sources/api/thar-be-updates/Cargo.toml
@@ -28,6 +28,9 @@ signpost = { path = "../../updater/signpost" }
 simplelog = "0.8.0"
 snafu = "0.6.8"
 tempfile = "3.1.0"
+tokio = { version = "0.2", default-features = false, features = ["macros", "rt-threaded"] }
+# When hyper updates to tokio 0.3:
+#tokio = { version = "0.3", default-features = false, features = ["macros", "rt-multi-thread"] }
 update_metadata = { path = "../../updater/update_metadata" }
 
 [build-dependencies]
