--- a/sources/api/apiclient/Cargo.toml
+++ b/sources/api/apiclient/Cargo.toml
@@ -12,10 +12,12 @@ exclude = ["README.md"]
 [dependencies]
 futures = "0.3"
 http = "0.2"
-hyper = "0.13"
+hyper = { version = "0.13", default-features = false }
 hyper-unix-connector = "0.1"
 snafu = "0.6"
-tokio = { version = "0.2", features = ["stream"] }
+tokio = { version = "0.2", default-features = false, features = ["macros", "rt-threaded"] }
+# When hyper updates to tokio 0.3:
+#tokio = { version = "0.3", default-features = false, features = ["macros", "rt-multi-thread"] }
 
 [build-dependencies]
 cargo-readme = "3.1"
