apiclient: add subcommand parsing
To start, the only subcommand is 'raw', which does the same thing
apiclient has always done - HTTP requests over a socket, like a
specialized curl.  This subcommand is the default, and can be omitted,
so apiclient's interface doesn't change.

--- a/sources/api/apiclient/Cargo.toml
+++ b/sources/api/apiclient/Cargo.toml
@@ -18,6 +18,7 @@ snafu = "0.6"
 tokio = { version = "0.2", default-features = false, features = ["macros", "rt-threaded"] }
 # When hyper updates to tokio 0.3:
 #tokio = { version = "0.3", default-features = false, features = ["macros", "rt-multi-thread"] }
+unindent = "0.1"
 
 [build-dependencies]
 cargo-readme = "3.1"
