--- a/sources/api/apiclient/Cargo.toml
+++ b/sources/api/apiclient/Cargo.toml
@@ -13,10 +13,13 @@ exclude = ["README.md"]
 http = "0.2"
 hyper = { version = "0.13", default-features = false }
 hyper-unix-connector = "0.1"
+log = "0.4"
+serde_json = "1.0"
+simplelog = "0.8"
 snafu = "0.6"
-tokio = { version = "0.2", default-features = false, features = ["macros", "rt-threaded"] }
+tokio = { version = "0.2", default-features = false, features = ["macros", "rt-threaded", "time"] }
 # When hyper updates to tokio 0.3:
-#tokio = { version = "0.3", default-features = false, features = ["macros", "rt-multi-thread"] }
+#tokio = { version = "0.3", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
 unindent = "0.1"
 
 [build-dependencies]
