--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -30,6 +30,8 @@ members = [
     "api/migration/migrations/v1.0.0/ecr-helper-control",
     "api/migration/migrations/v1.0.2/add-enable-spot-instance-draining",
     "api/migration/migrations/v1.0.3/add-sysctl",
+    "api/migration/migrations/v1.0.5/add-lockdown",
+    "api/migration/migrations/v1.0.5/sysctl-subcommand",
 
     "bottlerocket-release",
 
