--- a/packages/os/host-containers@.service
+++ b/packages/os/host-containers@.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Host container: %i
 After=host-containerd.service
-BindsTo=host-containerd.service
+Wants=host-containerd.service
 
 [Service]
 Type=simple
