--- a/packages/kubernetes-1.16/kubelet.service
+++ b/packages/kubernetes-1.16/kubelet.service
@@ -10,10 +10,11 @@ Type=notify
 EnvironmentFile=/etc/kubernetes/kubelet/env
 ExecStartPre=/sbin/iptables -P FORWARD ACCEPT
 # Pull the pause container image before starting `kubelet` so `containerd/cri` wouldn't have to
-ExecStartPre=/usr/bin/host-ctr -source ${POD_INFRA_CONTAINER_IMAGE} \
-    -pull-image-only \
-    -containerd-socket /run/dockershim.sock \
-    -namespace k8s.io
+ExecStartPre=/usr/bin/host-ctr \
+    --containerd-socket=/run/dockershim.sock \
+    --namespace=k8s.io \
+    pull-image \
+    --source=${POD_INFRA_CONTAINER_IMAGE}
 ExecStart=/usr/bin/kubelet \
     --cloud-provider aws \
     --config /etc/kubernetes/kubelet/config \
