--- a/packages/os/host-containers@.service
+++ b/packages/os/host-containers@.service
@@ -9,7 +9,10 @@ EnvironmentFile=/etc/host-containers/%i.env
 Environment=LOCAL_DIR=/local
 # Create directories for container persistent storage
 ExecStartPre=/usr/bin/mkdir -m 1777 -p ${LOCAL_DIR}/host-containers/%i
-ExecStart=/usr/bin/host-ctr -ctr-id='%i' -source='${CTR_SOURCE}' -superpowered='${CTR_SUPERPOWERED}'
+ExecStart=/usr/bin/host-ctr run \
+    --container-id='%i' \
+    --source='${CTR_SOURCE}' \
+    --superpowered='${CTR_SUPERPOWERED}'
 Restart=always
 RestartSec=45
 TimeoutStopSec=60
