Pull the datastore module into its own crate
The direct reason is to fix a (weak) circular dependency we have to introduce,
but it turns out every crate that depends on apiserver only uses the datastore
module, so it made sense to separate it in any case.

The (weak) circular dependency:
* apiserver depends on thar-be-updates, just to reflect the fact that it's used at runtime (hence weak)
* thar-be-updates depends on apiclient, so it can check available updates in the API
* apiclient needs to be able to depend on datastore, so it can validate queries

There are no functional changes here, just:
* renaming of files and then fixing the references to them
* updating docs for the rename, and improving the main docs for the datastore crate now that it's more obvious
* minor rustfmt fixes that came along for the ride, since I was updating a lot of files

--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "api/apiclient",
     "api/bork",
     "api/corndog",
+    "api/datastore",
     "api/early-boot-config",
     "api/ecs-settings-applier",
     "api/netdog",
