Add a vmware-dev variant
This change adds the necessary files for a VMWare development variant.
The files are currently a copy of the aws-dev variant but will diverge
over time.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,9 @@ jobs:
           - variant: aws-dev
             arch: x86_64
             supported: false
+          - variant: vmware-dev
+            arch: x86_64
+            supported: false
       fail-fast: false
     steps:
       - uses: actions/checkout@v2
