--- a/sources/api/storewolf/Cargo.toml
+++ b/sources/api/storewolf/Cargo.toml
@@ -22,6 +22,10 @@ toml = "0.5"
 
 [build-dependencies]
 cargo-readme = "3.1"
+merge-toml = { path = "merge-toml" }
+snafu = "0.6"
+toml = "0.5"
+walkdir = "2"
 
 [[bin]]
 name = "storewolf"
