kubernetes: move kubelet args to a separate template
By using a systemd drop-in file for the kubelet args, we can control
them using a template, while leaving the main service unit in place
for dependency resolution.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/kubernetes-1.19/kubelet.service
+++ b/packages/kubernetes-1.19/kubelet.service
@@ -15,20 +15,8 @@ ExecStartPre=/usr/bin/host-ctr \
     --namespace=k8s.io \
     pull-image \
     --source=${POD_INFRA_CONTAINER_IMAGE}
-ExecStart=/usr/bin/kubelet \
-    --cloud-provider aws \
-    --config /etc/kubernetes/kubelet/config \
-    --kubeconfig /etc/kubernetes/kubelet/kubeconfig \
-    --container-runtime=remote \
-    --container-runtime-endpoint=unix:///run/dockershim.sock \
-    --containerd=/run/dockershim.sock \
-    --network-plugin cni \
-    --root-dir /var/lib/kubelet \
-    --cert-dir /var/lib/kubelet/pki \
-    --node-ip ${NODE_IP} \
-    --node-labels "${NODE_LABELS}" \
-    --register-with-taints "${NODE_TAINTS}" \
-    --pod-infra-container-image ${POD_INFRA_CONTAINER_IMAGE}
+# Must be overridden by a drop-in file or `kubelet` won't start
+ExecStart=/usr/bin/false
 
 Restart=on-failure
 RestartForceExitStatus=SIGPIPE
