--- a/sources/api/storewolf/Cargo.toml
+++ b/sources/api/storewolf/Cargo.toml
@@ -23,6 +23,9 @@ toml = "0.5"
 [build-dependencies]
 cargo-readme = "3.1"
 merge-toml = { path = "merge-toml" }
+# model dep because we read default settings from the model directory; we also
+# reflect it with cargo:rerun-if-changed statements in build.rs.
+models = { path = "../../models" }
 snafu = "0.6"
 toml = "0.5"
 walkdir = "2"
