metricdog: add https proxy environment variables
Use the proxy.env file to give HTTPS_PROXY and NO_PROXY values to
metricdog. metricdog's HTTP client automatically picks these up and uses
them.

--- a/packages/os/mark-successful-boot.service
+++ b/packages/os/mark-successful-boot.service
@@ -5,6 +5,7 @@ After=multi-user.target
 # and include "RequiredBy=mark-successful-boot.service" in its [Install] section.
 
 [Service]
+EnvironmentFile=/etc/network/proxy.env
 Type=oneshot
 RemainAfterExit=true
 ExecStart=/bin/signpost mark-successful-boot
