--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -20,6 +20,7 @@ members = [
     "api/settings-committer",
     "api/migration/migrator",
     "api/migration/migration-helpers",
+    "api/shibaken",
 
     # "api/migration/migrations/vX.Y.Z/...
     "api/migration/migrations/v0.3.2/migrate-admin-container-v0-5-0",
