--- a/packages/containerd/Cargo.toml
+++ b/packages/containerd/Cargo.toml
@@ -12,6 +12,13 @@ path = "pkg.rs"
 url = "https://github.com/containerd/containerd/archive/v1.4.4/containerd-1.4.4.tar.gz"
 sha512 = "f09930d19f53381d86cf522954458ecc949f15a0c6a49f990bdb61fe19afee075356338998ed84bd756f16ba85211f55f9c638de8b7083d71e24d8e87335e070"
 
+# RPM BuildRequires
 [build-dependencies]
 glibc = { path = "../glibc" }
 libseccomp = { path = "../libseccomp" }
+
+# RPM Requires
+[dependencies]
+cni-plugins = { path = "../cni-plugins" }
+runc = { path = "../runc" }
+systemd = { path = "../systemd" }
