rename kernel package to kernel-5.4
This allows us to add other kernels to the packages tree.

Signed-off-by: Ben Cressey <bcressey@amazon.com>

--- a/packages/kernel-5.4/Cargo.toml
+++ b/packages/kernel-5.4/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-name = "kernel"
+name = "kernel-5_4"
 version = "0.1.0"
 edition = "2018"
 publish = false
 build = "build.rs"
+
+[package.metadata.build-package]
+package-name = "kernel-5.4"
 
 [lib]
 path = "pkg.rs"
