--- a/packages/release/Cargo.toml
+++ b/packages/release/Cargo.toml
@@ -24,7 +24,7 @@ filesystem = { path = "../filesystem" }
 glibc = { path = "../glibc" }
 grub = { path = "../grub" }
 iproute = { path = "../iproute" }
-kernel = { path = "../kernel" }
+kernel-5_4 = { path = "../kernel-5.4" }
 libaudit = { path = "../libaudit" }
 libgcc = { path = "../libgcc" }
 libstd-rust = { path = "../libstd-rust" }
