--- a/variants/vmware-dev/Cargo.toml
+++ b/variants/vmware-dev/Cargo.toml
@@ -17,6 +17,7 @@ kernel-parameters = [
 included-packages = [
 # core
     "release",
+    "kernel-5.10",
 # docker
     "docker-cli",
     "docker-engine",
@@ -38,6 +39,7 @@ path = "lib.rs"
 [build-dependencies]
 # core
 release = { path = "../../packages/release" }
+kernel-5_10 = { path = "../../packages/kernel-5.10" }
 # docker
 docker-cli = { path = "../../packages/docker-cli" }
 docker-engine = { path = "../../packages/docker-engine" }
