kubernetes-1.20: constrain ip_local_port_range
Constrains ephemeral ports for k8s-1.20 variants

--- a/packages/kubernetes-1.20/kubelet-sysctl.conf
+++ b/packages/kubernetes-1.20/kubelet-sysctl.conf
@@ -1,2 +1,5 @@
 # Overcommit handling mode - 1: Always overcommit
 vm.overcommit_memory = 1
+
+# This is generally considered a safe ephemeral port range
+net.ipv4.ip_local_port_range = 32768 60999
