aws-k8s-1.20: enable unified cgroup hierarchy
Adds `systemd.unified_cgroup_hierarchy=1` to the kernel parameters for
the aws-k8s-1.20 variant.

--- a/variants/aws-k8s-1.20/Cargo.toml
+++ b/variants/aws-k8s-1.20/Cargo.toml
@@ -20,6 +20,7 @@ included-packages = [
 kernel-parameters = [
     "console=tty0",
     "console=ttyS0",
+    "systemd.unified_cgroup_hierarchy=1",
 ]
 
 [lib]
