--- a/packages/release/release-sysctl.conf
+++ b/packages/release/release-sysctl.conf
@@ -18,6 +18,12 @@ net.ipv6.neigh.default.gc_thresh2 = 15360
 net.ipv4.neigh.default.gc_thresh3 = 16384
 net.ipv6.neigh.default.gc_thresh3 = 16384
 
+# Increasing to account for skb structure growth since the 3.4.x kernel series
+net.ipv4.tcp_wmem = 4096 20480 4194304
+
+# Bumped the default TTL to 255 (maximum)
+net.ipv4.ip_default_ttl = 255
+
 ## Bottlerocket settings ##
 # Enable IPv4 forwarding for container networking.
 net.ipv4.conf.all.forwarding = 1
