--- a/packages/release/release-tmpfiles.conf
+++ b/packages/release/release-tmpfiles.conf
@@ -1,3 +1,5 @@
 C /etc/hosts - - - -
 C /etc/nsswitch.conf - - - -
 C /etc/wicked/ifconfig/eth0.xml - - - -
+d /var/log/kdump 0700 root root -
+T /var/log/kdump - - - - security.selinux=system_u:object_r:secret_t:s0
