--- a/variants/vmware-dev/Cargo.toml
+++ b/variants/vmware-dev/Cargo.toml
@@ -13,6 +13,8 @@ supported-arches = ["x86_64"]
 kernel-parameters = [
     "console=ttyS0",
     "console=tty1",
+    # Only reserve if there are at least 2GB
+    "crashkernel=2G-:256M"
 ]
 included-packages = [
 # core
