systemd: move systemd mounts to preconfigured.target
This commit moves some of the systemd mount units to be part of
`preconfigured` instead of the `local-fs`. This is to reduce the
overhead of mounting unnecesary mount endpoints during the execution of
the crash kernel.

--- a/packages/release/usr-src-kernels.mount.in
+++ b/packages/release/usr-src-kernels.mount.in
@@ -11,4 +11,4 @@ Type=overlay
 Options=noatime,nosuid,nodev,lowerdir=/var/lib/kernel-devel/lower,upperdir=/var/lib/kernel-devel/upper,workdir=/var/lib/kernel-devel/work,context=system_u:object_r:local_t:s0
 
 [Install]
-WantedBy=local-fs.target
+WantedBy=preconfigured.target
