migrations: migrate `settings.container-registry`, and related models
Adds migrations for the new `container-registry` setting and the new
docker daemon config file and the new config file for host-containers
and bootstrap containers.

--- a/sources/Cargo.toml
+++ b/sources/Cargo.toml
@@ -42,6 +42,8 @@ members = [
     "api/migration/migrations/v1.2.0/hostname-setting-metadata",
     "api/migration/migrations/v1.2.0/add-custom-certificates",
     "api/migration/migrations/v1.2.0/kubelet-topology-manager",
+    "api/migration/migrations/v1.2.0/container-registry-mirrors",
+    "api/migration/migrations/v1.2.0/container-registry-config-restarts",
 
     "bottlerocket-release",
 
