--- a/Release.toml
+++ b/Release.toml
@@ -64,4 +64,6 @@ version = "1.1.4"
     "migrate_v1.2.0_hostname-setting-metadata.lz4",
     "migrate_v1.2.0_add-custom-certificates.lz4",
     "migrate_v1.2.0_kubelet-topology-manager.lz4",
+    "migrate_v1.2.0_container-registry-mirrors.lz4",
+    "migrate_v1.2.0_container-registry-config-restarts.lz4",
 ]
