--- a/Release.toml
+++ b/Release.toml
@@ -63,3 +63,6 @@ version = "1.1.4"
     "migrate_v1.1.5_hostname-setting.lz4",
     "migrate_v1.1.5_hostname-setting-metadata.lz4",
 ]
+"(1.1.4, 1.2.0)" = [
+    "migrate_v1.2.0_add-custom-certificates.lz4",
+]
