containerd: add configuration for NVIDIA runtime
The *-nvidia variants use a different runtime instead of runc to inject
prestart hooks using shimpei

Signed-off-by: Arnaldo Garcia Rincon <agarrcia@amazon.com>

--- a/packages/containerd/containerd.service
+++ b/packages/containerd/containerd.service
@@ -7,6 +7,7 @@ Wants=network-online.target configured.target
 [Service]
 Slice=runtime.slice
 EnvironmentFile=/etc/network/proxy.env
+EnvironmentFile=-/etc/containerd/nvidia.env
 ExecStart=/usr/bin/containerd
 Type=notify
 Delegate=yes
