--- a/sources/logdog/conf/logdog.common.conf
+++ b/sources/logdog/conf/logdog.common.conf
@@ -10,8 +10,8 @@ exec journalctl.errors journalctl -p err -a --no-pager
 exec journalctl.log journalctl -a --no-pager
 # file copy does not work for this, use cat command instead
 exec proc-mounts cat /proc/mounts
-exec settings.json apiclient --method GET --uri /
 exec signpost signpost status
 exec wicked wicked show all
 file os-release /etc/os-release
 glob /var/log/kdump/*
+settings settings.json
